--- a/src/stylesheets/partials/_threeiconbasicsection.scss
+++ b/src/stylesheets/partials/_threeiconbasicsection.scss
@@ -10,10 +10,9 @@
         text-transform: uppercase;
     }
     h4 {
-        @include fluid(font-size, 320px, 1366px, 14px, 22px);
+        @include fluid(font-size, 320px, 1366px, 18px, 22px);
         font-weight: 700;
         text-transform: uppercase;
-        margin-top: 50px;
     }
     &--icons {
         display: flex;
@@ -21,8 +20,7 @@
         list-style: none;
         margin: 70px auto;
         li {
-            width: 29%;
-            margin: 0 2%;
+            padding: 0 2%;
             svg {
                 @include fluid(max-width, 320px, 1000px, 80px, 150px);
                 width: 100%;
@@ -53,4 +51,21 @@
         border-color: $turquoise;
         font-weight: 700;
     }
+    @media screen and (max-width: 500px) {
+        &--icons {
+            flex-direction: column;
+            margin: 20px auto;
+            li {
+                margin-bottom: 10%;
+                svg {
+                    max-width: 150px;
+                }
+            }
+        }
+        h4 {
+            margin-top: 0;
+        }
+    }
 }
+
+
